# soundling

./: .gitignore  README.md
backend/: .gitignore  README.md  pyproject.toml
backend/backend/: settings.py  urls.py
backend/core/: views.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/leads/[id]/: page.tsx
frontend/src/app/health/: page.tsx
frontend/src/components/: LeadsDashboard.tsx  LeadsTable.tsx  NoteEditor.tsx  StatusBadge.tsx  StatusControl.tsx
frontend/src/lib/: format.ts  mock-leads.ts  types.ts
